# amls-20-21

./: .gitignore  README.md  Report_AMLS_20-21_SN15043735.docx  main.py  pyproject.toml  requirements.txt
A1/: a1.py  model.py  preparation.py  preprocessing.py
A1/logs/: a1_default_cnn_log.csv  a1_default_mobilenetv2_log.csv  a1_default_nasnetmobile_log.csv
A1/results/: A1_MobileNetV2_accuracy_loss.png:Zone.Identifier
A1/tuning/a1_hyper_cnn_tuning/: oracle.json  oracle.json:Zone.Identifier
A1/tuning/a1_hyper_mobilenet_tuning/: oracle.json
A2/: a2.py  preparation.py
A2/logs/: a2_default_cnn_log.csv  a2_default_nasnetmobile_log.csv
A2/tuning/a2_hyper_cnn_tuning/: oracle.json
A2/tuning/a2_hyper_mobilenet_tuning/: oracle.json
A2/tuning/a2_hyper_mobilenetv2_tuning/: oracle.json
A2/tuning/a2_hyper_nasnetmobile_tuning/: oracle.json
B1/: b1.py  plotting.py  preparation.py  tuning.py
B1/logs/: b1_default_cnn_log.csv  b1_default_mobilenet_log.csv  b1_default_mobilenetv2_log.csv  b1_default_nasnetmobile_log.csv
B1/tuning/b1_hyper_cnn_tuning/: oracle.json
B2/: b2.py  model.py  preparation.py
B2/logs/: b2_default_cnn_log.csv  b2_default_mobilenet_log.csv  b2_default_mobilenetv2_log.csv
B2/tuning/b2_hyper_cnn_tuning/: oracle.json
Datasets/: README.md
Datasets/cartoon_set/: labels.csv
Datasets/cartoon_set_test/: labels.csv
Datasets/celeba/: labels.csv
Datasets/celeba_test/: labels.csv
common/: activities.py  plotting.py  preprocessing.py  utils.py
common/models/: hyper_cnn.py  hyper_mobilenet.py  hyper_mobilenetv2.py  hyper_nasnetmobile.py
(+8555 files in other folders)
